Fix UI feedback, Next image, scrollbars, routing fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,11 @@ html, body, * {
   -ms-overflow-style: auto;
   scrollbar-width: thin;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
